tests/ui/builtin-superkinds/builtin-superkinds-in-metadata.stderr
error[E0277]: `X<T>` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-in-metadata.rs:13:56
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |                                                        ^^^^ `X<T>` cannot be sent between threads safely
   |
   = help: within `X<T>`, the trait `Send` is not implemented for `X<T>`, which is required by `X<T>: Send`
note: required because it appears within the type `X<T>`
  --> $DIR/builtin-superkinds-in-metadata.rs:9:8
   |
LL | struct X<T>(T);
   |        ^
note: required by a bound in `RequiresRequiresShareAndSend`
  --> $DIR/auxiliary/trait_superkinds_in_metadata.rs:7:58
   |
LL | pub trait RequiresRequiresShareAndSend : RequiresShare + Send { }
   |                                                          ^^^^ required by this bound in `RequiresRequiresShareAndSend`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> where X<T>: Send { }
   |                                                             ++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
